--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,21 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven {
+            url 'https://repo.eclipse.org/content/repositories/paho-releases/'
+            name 'Eclipse'
+        }
+
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
+
+
 
 
 
@@ -22,8 +32,16 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven {
+            url 'https://repo.eclipse.org/content/repositories/paho-releases/'
+            name 'Eclipse'
+        }
     }
+
 }
 
 task clean(type: Delete) {
